--- a/app/src/main/res/layout/activity_meal_plan.xml
+++ b/app/src/main/res/layout/activity_meal_plan.xml
@@ -13,7 +13,7 @@
     tools:context="com.example.alex.fitbytes.MealPlan">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_mp_title"
         android:text="Meal Planner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,8 +29,8 @@
         android:text="Editing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_editing"
-        android:layout_below="@+id/textView"
+        android:id="@+id/textView_mp_editing"
+        android:layout_below="@+id/textView_mp_title"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="37dp"
@@ -46,77 +46,87 @@
         android:textSize="32sp"
         android:layout_width="wrap_content"
         android:textColor="?android:attr/textColorTertiary"
-        android:layout_below="@+id/tv_editing"
+        android:layout_below="@+id/textView_mp_editing"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
         android:text="Date"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/pick_button"
+        android:id="@+id/button_mp_pickDate"
         android:layout_alignBottom="@+id/textView_mp_date"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_width="110dp" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/button_mp_cancel"
+        android:id="@+id/listView_mp_meals"
+        android:layout_alignTop="@+id/textView_mp_meals"
+        android:choiceMode="singleChoice"
+        android:listSelector="@android:color/holo_blue_light"/>
 
     <TextView
-        android:text="Pick a Recipe"
+        android:text="No recipes selected."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_mp_meals"
+        android:textSize="26sp"
+        android:layout_marginTop="17dp"
+        android:layout_below="@+id/textView_mp_recipe"
+        android:layout_toLeftOf="@+id/button_mp_addRecipe"
+        android:layout_toStartOf="@+id/button_mp_addRecipe" />
+
+    <TextView
+        android:text="Recipes (max 3)"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView_mp_recipe"
         android:textSize="32sp"
-        android:layout_alignBottom="@+id/button_mp_recipe"
+        android:layout_alignBottom="@+id/button_mp_addRecipe"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Recipe"
-        android:layout_width="wrap_content"
+        android:text="+"
         android:layout_height="wrap_content"
-        android:id="@+id/button_mp_recipe"
-        android:layout_below="@+id/pick_button"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp" />
+        android:id="@+id/button_mp_addRecipe"
+        android:layout_marginTop="22dp"
+        android:layout_width="50dp"
+        android:layout_below="@+id/button_mp_pickDate"
+        android:layout_alignLeft="@+id/button_mp_pickDate"
+        android:layout_alignStart="@+id/button_mp_pickDate" />
 
     <Button
-        android:id="@+id/addMeal"
-        android:text="Done"
-        android:layout_width="wrap_content"
+        android:text="-"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:layout_below="@+id/button_mp_recipe"
+        android:id="@+id/button_mp_removeRecipe"
+        android:layout_alignBaseline="@+id/button_mp_addRecipe"
+        android:layout_alignBottom="@+id/button_mp_addRecipe"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:id="@+id/button_mp_addMeal"
+        android:text="Done"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <Button
         android:text="Cancel"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:id="@+id/button_cancel"
-        android:layout_alignBaseline="@+id/addMeal"
-        android:layout_alignBottom="@+id/addMeal"
-        android:layout_toLeftOf="@+id/addMeal"
-        android:layout_toStartOf="@+id/addMeal" />
-
-    <TextView
-        android:id="@+id/UpcomingPlans"
-        android:text="Upcoming Plans"
-        android:textSize="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:layout_below="@+id/button_cancel"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <ListView
-            android:id="@+id/plannedMeals"
-            android:textSize="12dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-        android:layout_below="@+id/UpcomingPlans"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/button_mp_cancel"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/button_mp_addMeal"
+        android:layout_toStartOf="@+id/button_mp_addMeal" />
 
 </RelativeLayout>
