--- a/app/src/main/res/layout/activity_recipe_popup.xml
+++ b/app/src/main/res/layout/activity_recipe_popup.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:minWidth="50pt"
     android:minHeight="50pt"
@@ -8,10 +8,11 @@
     android:layout_width="350dp">
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.03">
+        android:layout_weight="0.03"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/mp_recipe_name"
@@ -53,7 +54,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
-    </RelativeLayout>
+    </LinearLayout>
 
     <!--<TableRow-->
         <!--android:layout_width="match_parent"-->
@@ -75,4 +76,4 @@
 
     <!--</TableRow>-->
 
-</LinearLayout>
+</ScrollView>
