--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -37,11 +37,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recipe_list"
-        android:layout_below="@+id/recipeSearchView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="54dp"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/recipeSearchView" />
 
     <Button
         android:text="Cancel"
@@ -51,4 +51,14 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="No results found"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_recipe_None"
+        android:textSize="26sp"
+        android:layout_below="@+id/recipeSearchView"
+        android:layout_alignLeft="@+id/recipeTitleID"
+        android:layout_alignStart="@+id/recipeTitleID" />
 </RelativeLayout>
