--- a/app/src/main/res/layout/activity_upcoming_plans.xml
+++ b/app/src/main/res/layout/activity_upcoming_plans.xml
@@ -11,7 +11,7 @@
     tools:context="com.example.alex.fitbytes.UpcomingPlans">
 
     <TextView
-        android:text="Meal Plan"
+        android:text="Meal Planner"
         android:id="@+id/textView_uplan_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,6 +40,7 @@
         android:layout_above="@+id/uplanAdd_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="11dp"
         android:layout_below="@+id/textView5" />
 
     <TextView
@@ -52,5 +53,18 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="No Plans "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_up_meals"
+        android:textSize="26sp"
+        android:layout_marginLeft="38dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="17dp"
+        android:layout_below="@+id/textView5"
+        android:layout_alignLeft="@+id/textView_uplan_title"
+        android:layout_alignStart="@+id/textView_uplan_title" />
 
 </RelativeLayout>
